--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Cloud Insurance Co - the one with the AI Bot</title>
+    <title>Health Insurance Co - the one with the AI Bot</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
                 <div class="banner">
                     <div class="titleArea">
                         <div class="logo"><img class="logoImage" src="images/wash/cloud.svg"></div>
-                        <div class="name"><a class="home" href=".">Cloud Insurance Co.</a></div>
+                        <div class="name"><a class="home" href=".">Health Insurance Co.</a></div>
                     </div>
                     <div class="loginArea">
                         <div class="menu"><a class="menulink" href="./about">About</a></div>
@@ -50,39 +50,6 @@
                               </div>
                           </a>
                       </div>
-                      <div class="tile">
-                          <a href="./soon">
-                              <div class="glow">
-                                  <img class="tileImage" src="images/Auto.svg ">
-                              </div>
-                              <div class="label">AUTO</div>
-                              <div>
-                                <button class="tileButton" disabled>Coming Soon</button>
-                              </div>
-                          </a>
-                      </div>
-                        <div class="tile">
-                            <a href="./soon">
-                                <div class="glow">
-                                    <img class="tileImage" src="images/Home.svg ">
-                                </div>
-                                <div class="label">HOME</div>
-                                <div>
-                                  <button class="tileButton" disabled>Coming Soon</button>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="tile">
-                            <a href="./soon">
-                              <div class="glow">
-                                  <img class="tileImage" src="images/travel.svg ">
-                              </div>
-                              <div class="label">TRAVEL</div>
-                              <div>
-                                <button class="tileButton" disabled>Coming Soon</button>
-                              </div>
-                            </a>
-                        </div>
                     </div>
                 </aside>
                 <div class="secondary">
@@ -94,7 +61,7 @@
                       <hr>
                     </div>
 
-                    <div class="welcome"><strong>Cloud Insurance Co.</strong> is a conceptual insurance site built using <a href="http://www.ibm.com/cloud-computing/bluemix/" target= "_blank">IBM Bluemix</a> and <a href="http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/">IBM Watson</a>. <br />
+                    <div class="welcome"><strong>Health Insurance Co.</strong> is a conceptual insurance site built using <a href="http://www.ibm.com/cloud-computing/bluemix/" target= "_blank">IBM Bluemix</a> and <a href="http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/">IBM Watson</a>. <br />
                         None of the policies are real ... the site exists to experiment and showcase cognitive and cloud computing ideas in the context of insurance.</p>
                     </div>
                 </div>
